# ui

./: CMakeLists.txt  LICENSE  README.md
cmake/dependencies/: sdl3.cmake  sdl3_ttf.cmake  tomlplusplus.cmake
cmake/features/: cxx.cmake
cmake/options/: options.cmake
cmake/output/: output.cmake
cmake/warnings/: strict.cmake
config/: config.toml
include/ui/app/: app.h
include/ui/config/: config.h
include/ui/widgets/: button.h  label.h  widget.h
include/ui/window/: window.h
include/ui/window1/: window1.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/config/: CMakeLists.txt  config.cpp
src/widgets/: CMakeLists.txt  button.cpp  label.cpp  widget.cpp
src/window/: CMakeLists.txt  window.cpp
src/window1/: CMakeLists.txt  window1.cpp
tests/: CMakeLists.txt
tests/app_test/: CMakeLists.txt  app_test.cpp
tests/window1_test/: CMakeLists.txt  window1_test.cpp
tests/window_test/: CMakeLists.txt  window_test.cpp
